--- a/home.html
+++ b/home.html
@@ -1,11 +1,12 @@
 <div class="homepage">
-    <article class="home">
-        <!-- <img src="img/homebg.jpg"> -->
-        <h1>𐔌 . ⋮ WELCOME TO MY WEBSITE .ᐟ ֹ ₊ ꒱</h1>
-        <div class="bouncing-text">
-            <p> Go to the navigation bar to know more about me ദ്ദി(˵ •̀ ᴗ - ˵ ) ✧ </p>
+    <div class="home">
+        <img src="img/home.png">
+        <div class="hometext">
+            <h1>𐔌 . ⋮ WELCOME TO MY WEBSITE .ᐟ ֹ ₊ ꒱</h1>
+                <div class="bouncing-text">
+                    <p> Go to the navigation bar to know more about me ദ്ദി(˵ •̀ ᴗ - ˵ ) ✧ </p>
+                </div>
         </div>
     </div>
     
-    <!-- <img src="img/home.png"> -->
 </div>
