--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
               <p>Birth place and date: Bekasi, Desember 29th 2004</p>
           </div>
           <div class="tall">
-            <img src="img/profile1.HEIC" alt="model">
+            <img src="img/profile1.jpg">
           </div>
           <div class="short">
             <h3>A Bit About Me</h3>
@@ -18,10 +18,10 @@
 
           <!-- next row -->
           <div class="tall">
-            <img src="img/profile2.JPG" alt="model">
+            <img src="img/profile2.JPG">
           </div>
           <div class="tall">
-            <img src="img/profile3.heic" alt="model">
+            <img src="img/profile3.jpg">
           </div>
           
           <div class="short">
@@ -32,7 +32,7 @@
           
           <!-- next row -->
           <div class="tall">
-            <img src="img/profile4.JPG" alt="model">
+            <img src="img/profile4.JPG">
           </div>
           <div class="short">
             <h3>skills</h3>
@@ -40,7 +40,7 @@
             <p> Hard Skills: C, C++, SQL, MS Office, Canva</p>
           </div>
           <div class="tall">
-            <img src="img/profile5.heic" alt="model">
+            <img src="img/profile5.jpg">
           </div>
           <div class="short">
             <h3>CONTACT INFORMATION</h3>
